# auth/dto/response/swagger_response.go
@@ -1,0 +1,13 @@
+package response
+
+type UserSwaggerResponse struct {
+	Code    int            `json:"code"`
+	Message string         `json:"message"`
+	Data    []UserResponse `json:"data"`
+}
+
+type AuthSwaggerResponse struct {
+	Code    int    `json:"code"`
+	Message string `json:"message"`
+	Data    string `json:"data"`
+}
