# docs/swagger.json
@@ -39,19 +39,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.APIResponse"
+                            "$ref": "#/definitions/response.AuthSwaggerResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/apperror.InitError"
+                            "$ref": "#/definitions/response.AuthSwaggerResponse"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/apperror.InitError"
+                            "$ref": "#/definitions/response.AuthSwaggerResponse"
                         }
                     }
                 }
@@ -75,13 +75,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.APIResponse"
+                            "$ref": "#/definitions/response.AuthSwaggerResponse"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/apperror.InitError"
+                            "$ref": "#/definitions/response.AuthSwaggerResponse"
                         }
                     }
                 }
@@ -114,19 +114,19 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/response.APIResponse"
+                            "$ref": "#/definitions/response.AuthSwaggerResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/apperror.InitError"
+                            "$ref": "#/definitions/response.AuthSwaggerResponse"
                         }
                     },
                     "409": {
                         "description": "Conflict",
                         "schema": {
-                            "$ref": "#/definitions/apperror.InitError"
+                            "$ref": "#/definitions/response.AuthSwaggerResponse"
                         }
                     }
                 }
@@ -166,13 +166,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.APIResponse"
+                            "$ref": "#/definitions/response.UserSwaggerResponse"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/apperror.InitError"
+                            "$ref": "#/definitions/response.UserSwaggerResponse"
                         }
                     }
                 }
@@ -208,19 +208,19 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/response.APIResponse"
+                            "$ref": "#/definitions/response.UserSwaggerResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/apperror.InitError"
+                            "$ref": "#/definitions/response.UserSwaggerResponse"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/apperror.InitError"
+                            "$ref": "#/definitions/response.UserSwaggerResponse"
                         }
                     }
                 }
@@ -253,19 +253,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.APIResponse"
+                            "$ref": "#/definitions/response.UserSwaggerResponse"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/apperror.InitError"
+                            "$ref": "#/definitions/response.UserSwaggerResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/apperror.InitError"
+                            "$ref": "#/definitions/response.UserSwaggerResponse"
                         }
                     }
                 }
@@ -308,25 +308,25 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/response.APIResponse"
+                            "$ref": "#/definitions/response.UserSwaggerResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/apperror.InitError"
+                            "$ref": "#/definitions/response.UserSwaggerResponse"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/apperror.InitError"
+                            "$ref": "#/definitions/response.UserSwaggerResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/apperror.InitError"
+                            "$ref": "#/definitions/response.UserSwaggerResponse"
                         }
                     }
                 }
@@ -360,13 +360,13 @@
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/apperror.InitError"
+                            "$ref": "#/definitions/response.UserSwaggerResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/apperror.InitError"
+                            "$ref": "#/definitions/response.UserSwaggerResponse"
                         }
                     }
                 }
@@ -374,18 +374,6 @@
         }
     },
     "definitions": {
-        "apperror.InitError": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "string"
-                },
-                "err": {},
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
         "request.AuthLoginRequest": {
             "type": "object",
             "required": [
@@ -470,49 +458,67 @@
                 }
             }
         },
-        "response.APIResponse": {
+        "response.AuthSwaggerResponse": {
             "type": "object",
             "properties": {
                 "code": {
                     "type": "integer"
                 },
-                "data": {},
-                "errors": {},
-                "message": {
+                "data": {
                     "type": "string"
                 },
-                "meta": {
-                    "$ref": "#/definitions/response.MetaData"
-                },
-                "status": {
-                    "$ref": "#/definitions/response.Status"
+                "message": {
+                    "type": "string"
                 }
             }
         },
-        "response.MetaData": {
+        "response.RoleResponse": {
             "type": "object",
             "properties": {
-                "limit": {
-                    "type": "integer"
+                "id": {
+                    "type": "string"
                 },
-                "page": {
-                    "type": "integer"
-                },
-                "total": {
-                    "type": "integer"
+                "name": {
+                    "type": "string"
                 }
             }
         },
-        "response.Status": {
-            "type": "string",
-            "enum": [
-                "success",
-                "error"
-            ],
-            "x-enum-varnames": [
-                "StatusSuccess",
-                "StatusError"
-            ]
+        "response.UserResponse": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "roles": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/response.RoleResponse"
+                    }
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.UserSwaggerResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/response.UserResponse"
+                    }
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
         }
     },
     "securityDefinitions": {
